--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,7 @@
 
 
 
-  <title>DevConnector: A social network for developers</title>
+  <title>GoodStreams: what movies and TV shows to watch and stream on Netflix, Amazon, HBO, Hulu, Roku</title>
 </head>
 
 <body>
